uids are not consistent, so let's make it all like /tmp is

--- a/jobs/nfstestserver/templates/install.erb
+++ b/jobs/nfstestserver/templates/install.erb
@@ -9,8 +9,8 @@ apt-get --assume-yes install nfs-kernel-server
 
 <% p('nfstestserver.export_volumes', []).each do |volume| %>
 mkdir -p <%= p("nfstestserver.export_root_path") %>/export/<%= volume %>
-chmod 775 <%= p("nfstestserver.export_root_path") %>/export/<%= volume %>
-chown root:vcap <%= p("nfstestserver.export_root_path") %>/export/<%= volume %>
+chmod 1777 <%= p("nfstestserver.export_root_path") %>/export/<%= volume %>
+chown root:root <%= p("nfstestserver.export_root_path") %>/export/<%= volume %>
 <% end %>
 
 mkdir -p /export
