Use lazy unmount of all paths under /export

--- a/jobs/nfstestserver/templates/post-stop.erb
+++ b/jobs/nfstestserver/templates/post-stop.erb
@@ -2,7 +2,7 @@
 
 
 # Check the paths from /etc/exports matching /export and unmount them
-for path in $(cat /etc/exports | grep export | awk '{ print $1 }')
+for path in $(mount | awk '{print $3}' | grep -E '^/export')
 do
-  umount "${path}"
+  umount -l "${path}"
 done
